# hf_inference

./: Dockerfile  README.md  docker-compose.yml  load_test.ipynb  nginx.conf  pyproject.toml  start.sh
app/: app.py
